--- a/.project
+++ b/.project
@@ -14,4 +14,24 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1350574163284</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.xcf</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1350574163288</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*.pdf</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
